# cuckoo-miner

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md
config/: Cargo.toml
config/src/: lib.rs  types.rs
cuckoo-config/: Cargo.toml
cuckoo-config/src/: lib.rs  types.rs
cuckoo-miner/: Cargo.toml
cuckoo-miner/src/: cuckoo_miner.rs  lib.rs  miner.rs  pluginmanager.rs  types.rs
cuckoo-miner/tests/: miner_impl.rs
cuckoo-sys/: Cargo.toml  build.rs
cuckoo-sys/cuckoo-sys/src/: cuckoo.h  cuckoo_miner.cpp  cuckoo_miner.hpp
cuckoo-sys/dylibs/common/: Cargo.toml  lib.rs
cuckoo-sys/dylibs/common/src/: build.rs  lib.rs
cuckoo-sys/dylibs/cuckoo10/: Cargo.toml  build.rs
cuckoo-sys/dylibs/cuckoo10/src/: lib.rs
cuckoo-sys/dylibs/cuckoo_basic_12/: Cargo.toml  build.rs  sources.txt
cuckoo-sys/dylibs/cuckoo_basic_30/: Cargo.toml  build.rs
cuckoo-sys/dylibs/cuckoo_edgetrim_12/: Cargo.toml
cuckoo-sys/dylibs/cuckoo_edgetrim_30/: Cargo.toml
cuckoo-sys/dylibs/cuckoo_mean_28/: Cargo.toml  build.rs  sources.txt
cuckoo-sys/dylibs/cuckoo_mean_30/: Cargo.toml  build.rs
cuckoo-sys/dylibs/cuckoo_simple_12/: Cargo.toml
cuckoo-sys/dylibs/cuckoo_tomato_12/: Cargo.toml  build.rs
cuckoo-sys/dylibs/cuckoo_tomato_30/: Cargo.toml  build.rs
cuckoo-sys/plugins/: CMakeLists.txt
cuckoo-sys/plugins/common/: Cargo.toml  lib.rs
cuckoo-sys/plugins/common/src/: build.rs  lib.rs
cuckoo-sys/plugins/cuckoo_edgetrim_12/: build.rs
cuckoo-sys/plugins/cuckoo_edgetrim_16/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_edgetrim_20/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_edgetrim_25/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_edgetrim_28/: Cargo.toml  build.rs  sources.txt
cuckoo-sys/plugins/cuckoo_edgetrim_30/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_mean_25/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_mean_28/: build.rs  sources.txt
cuckoo-sys/plugins/cuckoo_mean_30/: Cargo.toml
cuckoo-sys/plugins/cuckoo_simple_12/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_simple_16/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_simple_20/: Cargo.toml  build.rs  sources.txt
cuckoo-sys/plugins/cuckoo_simple_25/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_simple_28/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_simple_30/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_tomato_12/: Cargo.toml  build.rs  sources.txt
cuckoo-sys/plugins/cuckoo_tomato_16/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_tomato_20/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_tomato_25/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_tomato_28/: Cargo.toml  build.rs
cuckoo-sys/plugins/cuckoo_tomato_30/: Cargo.toml  build.rs  sources.txt
cuckoo-sys/src/: build.rs  dylib_manager.rs  lib.rs  manager.rs  plugin_manager.rs  sanity.rs  scratch.txt
cuckoo-sys/tests/: plugins.rs
cuckoo_miner/: Cargo.toml
cuckoo_miner/examples/: first_test.rs
cuckoo_miner/src/: lib.rs
cuckoo_sys/: README.md  build.rs  cuckoo_sys_lib_sources.txt
cuckoo_sys/src/: lib.rs
doc/: build.md
error/: Cargo.toml
error/src/: error.rs  lib.rs
libcuckoo-sys/: Cargo.toml
manager/: Cargo.toml
manager/src/: lib.rs  manager.rs
miner/: Cargo.toml
miner/src/: cuckoo.rs  delegator.rs  lib.rs  miner.rs  pluginmanager.rs
miner/tests/: async_mode.rs  common.rs  miner_impl.rs  sync_mode.rs
src/: build.rs  lib.rs  main.rs
src/cuckoo_sys/: manager.rs  mod.rs
src/cuckoo_sys/plugins/: CMakeLists.txt
src/cuckoo_sys/plugins/cmake/: find_cuda.cmake
src/cuckoo_sys/plugins/cuckoo/src/: Makefile  cuckoo.h  cuckoo_miner.cpp  cuckoo_miner.hpp  cuda_miner.cu  matrix_miner.cpp  matrix_miner.hpp  mean_miner.cpp  mean_miner.hpp  simple_miner.cpp  tomato_miner.cpp  tomato_miner.h
src/cuckoo_sys/plugins/cuckoo/src/cuckoo_miner/: concurrentqueue.h  cuckoo_miner.h  cuckoo_miner_adds.h  cuda_miner_adds.h  matrix_miner_adds.h
src/error/: error.rs
src/manager/: manager.rs
src/miner/: delegator.rs  miner.rs
tests/: async.rs  async_mode.rs  common.rs  cuckoo.rs  performance.rs  plugins.rs  sync_mode.rs
tests/common/: mod.rs
