[package]
name = "cuckoo_miner"
version = "0.1.0"
authors = ["yeastplume"]

[workspace]
members = ["miner", "error", "manager", "cuckoo-sys"]

[dependencies]
miner = { path = "miner", version="0.1.0" }
error = { path = "error", version="0.1.0" }
manager = { path = "manager", version="0.1.0" }

[[bin]]
name = "cuckoo_miner_test"
path = "src/main.rs"



