[package]
name = "cuckoo-sys"
version = "0.1.0"
authors = ["yeastplume"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Rust bindings to John Tromp's Cuckoo Cycle Implementations"
readme = "README.md"
workspace = ".."

[dependencies]
libc = "0.2.24"
libloading = "0.4.0"
lazy_static = "0.2.8"
log = "^0.3"

error = { path = "../error", version="0.1.0" }

#Plugins

cuckoo_simple_12 = { path = "plugins/cuckoo_simple_12" }
cuckoo_simple_16 = { path = "plugins/cuckoo_simple_16" }
cuckoo_simple_20 = { path = "plugins/cuckoo_simple_20" }
cuckoo_simple_25 = { path = "plugins/cuckoo_simple_25" }
cuckoo_simple_28 = { path = "plugins/cuckoo_simple_28" }
cuckoo_simple_30 = { path = "plugins/cuckoo_simple_30" }
cuckoo_edgetrim_16 = { path = "plugins/cuckoo_edgetrim_16" }
cuckoo_edgetrim_20 = { path = "plugins/cuckoo_edgetrim_20" }
cuckoo_edgetrim_25 = { path = "plugins/cuckoo_edgetrim_25" }
cuckoo_edgetrim_28 = { path = "plugins/cuckoo_edgetrim_28" }
cuckoo_edgetrim_30 = { path = "plugins/cuckoo_edgetrim_30" }
#Mean miner is going to take some work to integrate
#cuckoo_mean_25 = { path = "plugins/cuckoo_mean_25" }
#cuckoo_mean_28 = { path = "plugins/cuckoo_mean_28" }
#And tomato miner doesn't compile ATM
#cuckoo_tomato_12 = { path = "plugins/cuckoo_tomato_12" }
#cuckoo_tomato_30 = { path = "plugins/cuckoo_tomato_30" }


[dev-dependencies]
const-cstr = "0.2"

[build-dependencies]
gcc = "0.3.51"
