[package]
name = "cuckoo-sys"
version = "0.1.0"
authors = ["yeastplume"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Rust bindings to John Tromp's Cuckoo Cycle Implementations"
readme = "README.md"
workspace = ".."
build = "src/build.rs"

[dependencies]
libc = "0.2.24"
libloading = "0.4.1"
log = "^0.3"

error = { path = "../error", version="0.1.0" }

[dev-dependencies]
const-cstr = "0.2"

[build-dependencies]
cmake = "0.1.24"
fs_extra = "1.0.0"
