[package]
name = "manager"
version = "0.1.0"
authors = ["yeastplume"]
workspace = ".."

[dependencies]
env_logger="^0.3.5"
log = "^0.3"
regex = "~0.2.2"
glob = "0.2.11"
serde = "~1.0.8"
serde_derive = "~1.0.8"
serde_json = "~1.0.2"

cuckoo-sys = { path = "../cuckoo-sys" }
error = { path = "../error", version="0.1.0" }




