[package]
name = "miner"
version = "0.1.0"
authors = ["yeastplume"]
workspace = ".."

[dependencies]
env_logger="^0.3.5"
log = "^0.3"
rand = "^0.3"
byteorder = "^0.5"
num-bigint = "^0.1.35"
blake2-rfc = "~0.2.17"
regex = "0.1.80"
cuckoo-sys = { path = "../cuckoo-sys" }
error = { path = "../error", version="0.1.0" }



