[package]
name = "cuckoo_10"
version = "0.1.0"
authors = ["yeastplume"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Cuckoo 10 Build"
readme = "README.md"
workspace = "../../../"

build = "build.rs"

[lib]
name = "cuckoo_10"
crate-type = ["dylib"]

[dependencies]
libc = "0.2.24"
libloading = "0.4.0"

[dev-dependencies]
const-cstr = "0.2"

[build-dependencies]
gcc = "0.3.51"
make-cmd = "0.1"
