[package]
name = "cuckoo_edgetrim_16"
version = "0.1.0"
authors = ["yeastplume"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Plugin implementing Cuckoo Cycle with edge trimming, Cuckoo size 16"

build = "build.rs"

[lib]
crate-type = ["dylib"]
path = "../common/lib.rs"

[dependencies]
libc = "0.2.24"

[build-dependencies]
common = { path = "../common" }
