[package]
name = "cuckoo_simple_28"
version = "0.1.0"
authors = ["yeastplume"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Plugin implementing Cuckoo Cycle Simple Algorithm, Cuckoo size 28"

build = "build.rs"

[lib]
crate-type = ["dylib"]
path = "../common/lib.rs"

[dependencies]
libc = "0.2.24"

[build-dependencies]
common = { path = "../common" }
