[package]
name = "cuckoo_tomato_30"
version = "0.1.0"
authors = ["yeastplume"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Plugin implementing Cuckoo Cycle TMTO Algorithm, Cuckoo size 30"

build = "build.rs"

[lib]
crate-type = ["dylib"]
path = "../common/lib.rs"

[dependencies]
libc = "0.2.24"

[build-dependencies]
common = { path = "../common" }
